# ICT_03

submission/: INSTRUCTION.md  README.md  TECHNICAL_REPORT.md
submission/logs/: validation-summary.json  validation.md
submission/result/: codegraph-evidence.md  findings.json  output.md  run-summary.json
submission/work/: run.sh  setup.sh
submission/work/skills/specdiff-review/: SKILL.md
submission/work/skills/specdiff-review/agents/: openai.yaml
submission/work/specdiff/: pyproject.toml
submission/work/specdiff/schemas/: findings.schema.json
submission/work/specdiff/specdiff/: __init__.py  cli.py  detectors.py  documents.py  engine.py  evidence_reader.py  matching.py  models.py  reporting.py
submission/work/specdiff/tests/: __init__.py  test_public_benchmark.py  test_synthetic.py
submission2/: .gitignore  INSTRUCTION.md  TECHNICAL_REPORT.md
submission2/logs/: interaction.md
submission2/logs/trace/: execution-trace.md
submission2/logs/trace/actual-run/: extra-tests.txt  extra-tests.xml
submission2/result/: output.md  validation-summary.json
submission2/result/actual-run/: baseline-candidates.json  baseline-candidates.md  baseline-failures.json  baseline-verification.json  extra-verification.json  final-candidates.json  final-candidates.md  final-verification.json  patch-application.json  protected-files.json  protected-verify.json  repair-plan.json  repair-plan.md  repair-report.json
submission2/work/: setup.sh
submission2/work/skills/design-implementation-repair/: SKILL.md
(+13 files in other folders)
