[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "specdiff-reviewer"
version = "0.1.0"
description = "Evidence-gated design-to-code consistency audit CLI"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
specdiff = "specdiff.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["specdiff*"]
